[gd_scene load_steps=5 format=3 uid="uid://da57j84vmpxco"]

[ext_resource type="Script" path="res://scripts/levels/level5.gd" id="1_54eug"]
[ext_resource type="PackedScene" uid="uid://b4xf4bgafr24q" path="res://scenes/template_level.tscn" id="2_1jlwe"]
[ext_resource type="Texture2D" uid="uid://bs8pjfml66rt5" path="res://iconmonochrome.svg" id="2_hidvy"]
[ext_resource type="PackedScene" uid="uid://dy4vpfkmtq0ua" path="res://scenes/ball.tscn" id="3_jyefw"]

[node name="level5" type="Node2D"]
script = ExtResource("1_54eug")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(256, 224)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 256.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.145098, 0.168627, 1)

[node name="Ground" type="Node2D" parent="."]
z_index = 5

[node name="ColorRect" type="ColorRect" parent="Ground"]
offset_top = 208.0
offset_right = 256.0
offset_bottom = 224.0
color = Color(0.239216, 0.231373, 0.270588, 1)

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(243, -20)
scale = Vector2(0.02, 0.02)
texture = ExtResource("2_hidvy")

[node name="Texts" type="Node2D" parent="."]

[node name="c++ error" type="Label" parent="Texts"]
offset_right = 40.0
offset_bottom = 23.0
text = "c++ error"

[node name="cannot open" type="Label" parent="Texts"]
offset_top = 24.0
offset_right = 379.0
offset_bottom = 47.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "cannot open file \"res://scenes/levels/level5.tscn\" "

[node name="cannot open2" type="Label" parent="Texts"]
visible = false
offset_top = 48.0
offset_right = 379.0
offset_bottom = 71.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "cannot open file \"res://scripts/ball.gd\""

[node name="cannot open3" type="Label" parent="Texts"]
visible = false
offset_top = 72.0
offset_right = 379.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "cannot open file \"res://scripts/pop.gd\""

[node name="cannot open4" type="Label" parent="Texts"]
visible = false
offset_top = 96.0
offset_right = 379.0
offset_bottom = 119.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "cannot open file \"res://scripts/devil.gd\""

[node name="cannot open5" type="Label" parent="Texts"]
visible = false
offset_top = 120.0
offset_right = 379.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "cannot open file \"res://scripts/piotr.gd\""

[node name="cannot open6" type="Label" parent="Texts"]
visible = false
offset_top = 144.0
offset_right = 379.0
offset_bottom = 167.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "cannot open file \"res://scripts/pause_menu.gd\""

[node name="cannot open7" type="Label" parent="Texts"]
visible = false
offset_top = 168.0
offset_right = 379.0
offset_bottom = 191.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "mastercard looking ahh \"w\""

[node name="cannot open8" type="Label" parent="Texts"]
visible = false
offset_top = 192.0
offset_right = 379.0
offset_bottom = 215.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "cannot open file \"res://scripts/idk.gd\""

[node name="colon3" type="Label" parent="."]
visible = false
offset_right = 71.0
offset_bottom = 23.0
text = ":3 :3 :3"

[node name="testLevel" parent="." instance=ExtResource("2_1jlwe")]

[node name="Ball" parent="testLevel" instance=ExtResource("3_jyefw")]
position = Vector2(8, 136)
size = 8
colour = "indian_red"
rings = 10
direction = false

[node name="Ball2" parent="testLevel" instance=ExtResource("3_jyefw")]
position = Vector2(128, 136)
colour = "orange_red"
rings = 10
direction = false

[node name="Label2" type="Label" parent="testLevel/Ball2"]
offset_left = -197.0
offset_top = -56.0
offset_right = 197.0
offset_bottom = -33.0
theme_override_colors/font_color = Color(1, 0.470588, 0.419608, 1)
text = "get_method: Can't get method on CallableCustom \"pipi\""

[node name="Ball4" parent="testLevel" instance=ExtResource("3_jyefw")]
position = Vector2(128, 136)
colour = "gold"
rings = 10

[node name="Label" type="Label" parent="testLevel/Ball4"]
offset_left = -197.0
offset_top = -56.0
offset_right = 197.0
offset_bottom = -33.0
theme_override_colors/font_color = Color(1, 0.870588, 0.4, 1)
text = "the parameter \"delta\" is never used in the function"

[node name="Ball3" parent="testLevel" instance=ExtResource("3_jyefw")]
position = Vector2(248, 136)
size = 8
colour = "indian_red"
rings = 10

[node name="timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
